--- a/components/blog-components/page-wrapper/page-wrapper.module.scss
+++ b/components/blog-components/page-wrapper/page-wrapper.module.scss
@@ -25,7 +25,7 @@
   width: 100%;
   bottom: 0;
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.88) 0%, transparent 88%);
-  &:after {
+  э &:after {
     content: "";
     background: url("data:image/svg+xml,%3Csvg preserveAspectRatio='none' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1183 42.14'%3E%3Cpath fill='%23fff' d='M0,0S535,78.49,1183,0V42.14H0Z'/%3E%3C/svg%3E%0A")
       no-repeat center bottom;
