--- a/styles/globals.css
+++ b/styles/globals.css
@@ -91,7 +91,10 @@ h6 {
 
 /*------reset styles end-------*/
 
-
 * {
   font-family: "Open Sans", sans-serif;
+}
+
+.slick-active {
+  background: rgb(255, 255, 255) !important;
 }
