--- a/components/slider/slider.module.scss
+++ b/components/slider/slider.module.scss
@@ -10,12 +10,17 @@
   }
 
   ul {
+    max-width: 1660px;
+    padding: 0px 60px;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
     position: absolute;
     top: 50%;
-    transform: translate(-50%) rotate(90deg);
-    left: 180px;
+    display: flex !important;
+    row-gap: 20px;
+    flex-direction: column;
     z-index: 10;
-    height: 14px;
     background: none;
 
     li {
@@ -27,35 +32,4 @@
       transition: all 3s;
     }
   }
-}
-
-.img-wrapper {
-  position: relative;
-}
-
-.place-wrapper {
-  height: auto !important;
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 140px;
-  padding: 0 200px;
-}
-
-.title {
-  color: #ffffff;
-  font-size: 30px;
-  text-transform: uppercase;
-}
-
-.description {
-  margin-top: 10px;
-  color: #ffffff;
-  font-size: 20px;
-}
-
-.icon {
-  position: absolute;
-  top: 4px;
-  left: 170px;
 }
