--- a/components/navigation/navigation.module.scss
+++ b/components/navigation/navigation.module.scss
@@ -74,3 +74,28 @@
   column-gap: 10px;
   align-items: flex-end;
 }
+
+.svg-wrapper{
+	position: relative;
+	width: 113px;
+	height: 134px;
+}
+
+@media(max-width: 1550px) {
+
+	.svg-wrapper{
+		position: relative;
+		width: 72px;
+		height: 88px;
+	}
+	
+.title {
+
+	font-size: 60px;
+}
+
+.header {
+
+	max-width: 1460px;
+}
+}
