--- a/components/main-page-sections/travel-template/travel-template.module.scss
+++ b/components/main-page-sections/travel-template/travel-template.module.scss
@@ -1,23 +1,61 @@
 .wrapper {
   height: 60vh;
+  min-height: 500px;
+  background: linear-gradient(
+    90deg,
+    rgb(0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.8743872549) 100%
+  );
 }
 
 .grid-wrapper {
+  max-width: 1400px;
+  margin: 0 auto;
   height: 100%;
   display: grid;
+  gap: 20px;
+  padding: 0 20px;
   grid-auto-flow: column;
 }
 
-.img-wrapper {
+.card-wrapper {
+  height: 100%;
+  position: relative;
+  transition: all 0.5s;
+  &:hover {
+    filter: brightness(1.2);
+    transform: scale(1.02);
+  }
+}
+
+.card-content {
+  border-left: 4px solid rgb(255, 169, 11);
+  border-right: 4px solid rgb(255, 169, 11);
+  margin: 0 auto;
+  height: 100%;
+  position: relative;
+  max-width: 430px;
+  filter: brightness(0.8);
+
   position: relative;
 
-  img {
-    filter: brightness(0.8);
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    height: 4px;
+    width: 15%;
+    background: rgb(255, 169, 11);
+  }
 
-    // &:hover {
-    //   filter: brightness(1);
-    //   transform: scale(1.2);
-    // }
+  &::after {
+    top: auto;
+    left: auto;
+    bottom: 0;
+    right: 0;
   }
 }
 
