--- a/components/main-page-sections/about-me/section-element/section-element.module.scss
+++ b/components/main-page-sections/about-me/section-element/section-element.module.scss
@@ -1,10 +1,6 @@
 .wrapper {
-  padding: 80px 0;
-  background: linear-gradient(
-    90deg,
-    rgba(0, 0, 0, 1) 0%,
-    rgba(0, 0, 0, 0.8743872549019608) 100%
-  );
+  padding: 120px 0;
+  background: #080808;
 }
 
 .flex-wrapper {
