--- a/components/blog/blog-components/page-wrapper/page-wrapper.module.scss
+++ b/components/blog/blog-components/page-wrapper/page-wrapper.module.scss
@@ -1,5 +1,6 @@
 .wrapper {
   position: relative;
+  background: #080808;
 }
 
 .first-screen-wrapper {
@@ -51,6 +52,7 @@
   font-size: 60px;
   font-weight: 300;
   letter-spacing: 10px;
+  line-height: 70px;
 }
 .subtitle {
   margin-top: 20px;
