--- a/components/blog/blog-components/paragraph/paragraph.module.scss
+++ b/components/blog/blog-components/paragraph/paragraph.module.scss
@@ -1,7 +1,9 @@
 .paragraph {
   padding: 15px 0px;
   line-height: 28px;
-  font-size: 20px;
+  font-size: 25px;
+  color: #fdcea0;
+  letter-spacing: 2px;
 }
 
 .right {
