--- a/components/blog/blog-components/img/img.module.scss
+++ b/components/blog/blog-components/img/img.module.scss
@@ -3,8 +3,17 @@
 }
 
 .img {
-  width: 90%;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   margin: 0 auto;
+  img {
+    height: 100%;
+    width: 100%;
+    object-fit: contain !important;
+  }
 }
 
 .description {
@@ -12,4 +21,5 @@
   margin-top: 20px;
   line-height: 28px;
   font-size: 20px;
+  color: #fdcea0;
 }
