--- a/components/main/slider/slider-item.module.scss
+++ b/components/main/slider/slider-item.module.scss
@@ -1,211 +1,210 @@
 .slide {
-	opacity: 0;
-	animation-name: slider;
-	animation-fill-mode: forwards;
-	animation-duration: 20s;
-	animation-iteration-count: infinite;
-	animation-timing-function: ease-in-out;
-	will-change: opacity;
+  opacity: 0;
+  animation-name: slider;
+  animation-fill-mode: forwards;
+  animation-duration: 20s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  will-change: opacity;
 }
 
 .slide-indicator {
-	width: 20px;
-	height: 20px;
-	border-radius: 50%;
-	border: 1px solid #ffffff;
-	position: absolute;
-	left: 175px;
-	top: 50%;
-	background-color: transparent;
-	will-change: background-color;
-	z-index: 15;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 1px solid #ffffff;
+  position: absolute;
+  left: 175px;
+  top: 50%;
+  background-color: transparent;
+  will-change: background-color;
+  z-index: 15;
 
-	animation-name: sliderIndicator;
-	animation-fill-mode: forwards;
-	animation-duration: 20s;
-	animation-iteration-count: infinite;
-	animation-timing-function: ease-in-out;
-	will-change: opacity;
+  animation-name: sliderIndicator;
+  animation-fill-mode: forwards;
+  animation-duration: 20s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  will-change: opacity;
 }
 
 .img-wrapper {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 
-	&:nth-child(1) {
-		.slide {
-			animation-delay: 0s;
-		}
+  &:nth-child(1) {
+    .slide {
+      animation-delay: 0s;
+    }
 
-		.slide-indicator {
-			top: calc(50% - 60px);
-			animation-delay: 0s;
-		}
-	}
+    .slide-indicator {
+      top: calc(50% - 60px);
+      animation-delay: 0s;
+    }
+  }
 
-	&:nth-child(2) {
-		.slide {
-			animation-delay: 5s;
-		}
+  &:nth-child(2) {
+    .slide {
+      animation-delay: 5s;
+    }
 
-		.slide-indicator {
-			top: calc(50% - 20px);
-			animation-delay: 5s;
-		}
-	}
+    .slide-indicator {
+      top: calc(50% - 20px);
+      animation-delay: 5s;
+    }
+  }
 
-	&:nth-child(3) {
-		.slide {
-			animation-delay: 10s;
-		}
+  &:nth-child(3) {
+    .slide {
+      animation-delay: 10s;
+    }
 
-		.slide-indicator {
-			top: calc(50% + 20px);
-			animation-delay: 10s;
-		}
-	}
+    .slide-indicator {
+      top: calc(50% + 20px);
+      animation-delay: 10s;
+    }
+  }
 
-	&:nth-child(4) {
-		.slide {
-			animation-delay: 15s;
-		}
+  &:nth-child(4) {
+    .slide {
+      animation-delay: 15s;
+    }
 
-		.slide-indicator {
-			top: calc(50% + 60px);
-			animation-delay: 15s;
-		}
-	}
+    .slide-indicator {
+      top: calc(50% + 60px);
+      animation-delay: 15s;
+    }
+  }
 }
 
 @keyframes slider {
-	0% {
-		opacity: 0;
-	}
+  0% {
+    opacity: 0;
+  }
 
-	10% {
-		opacity: 1;
-	}
+  10% {
+    opacity: 1;
+  }
 
-	32% {
-		opacity: 1;
-	}
+  32% {
+    opacity: 1;
+  }
 
-	37% {
-		opacity: 0;
-	}
+  37% {
+    opacity: 0;
+  }
 
-	100% {
-		opacity: 0;
-	}
+  100% {
+    opacity: 0;
+  }
 }
 
 @keyframes sliderIndicator {
-	0% {
-		background-color: transparent;
-	}
+  0% {
+    background-color: transparent;
+  }
 
-	10% {
-		background-color: #ffffff;
-	}
+  10% {
+    background-color: #ffffff;
+  }
 
-	32% {
-		background-color: #ffffff;
-	}
+  32% {
+    background-color: #ffffff;
+  }
 
-	37% {
-		background-color: transparent;
-	}
+  37% {
+    background-color: transparent;
+  }
 
-	100% {
-		background-color: transparent;
-	}
+  100% {
+    background-color: transparent;
+  }
 }
 
 .container {
-	height: 100vh;
-	margin: 0 auto;
-	max-width: 1900px;
-	position: relative;
+  height: 100vh;
+  margin: 0 auto;
+  max-width: 1900px;
+  position: relative;
 }
 
 .indicator-container {
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	position: absolute;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .indicator-wrapper {
-	flex: 1 1;
-	max-width: 1900px;
-	position: relative;
+  flex: 1 1;
+  max-width: 1900px;
+  position: relative;
 }
 
 .place-wrapper {
-	height: auto !important;
-	position: absolute;
-	left: 0;
-	right: 0;
-	bottom: 140px;
-	padding: 20px 200px;
-	background: linear-gradient(90deg,
-			rgba(0, 0, 0, 0) 0%,
-			rgba(0, 0, 0, 0.31416316526610644) 9%,
-			rgba(0, 0, 0, 0.47942927170868344) 23%,
-			rgba(0, 0, 0, 0) 32%,
-			rgba(0, 0, 0, 0) 100%);
+  height: auto !important;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 140px;
+  padding: 20px 200px;
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.31416316526610644) 9%,
+    rgba(0, 0, 0, 0.47942927170868344) 23%,
+    rgba(0, 0, 0, 0) 32%,
+    rgba(0, 0, 0, 0) 100%
+  );
 }
 
 .title {
-	letter-spacing: 5px;
-	color: #ffffff;
-	font-size: 30px;
-	text-transform: uppercase;
+  letter-spacing: 5px;
+  color: #ffffff;
+  font-size: 30px;
+  text-transform: uppercase;
 }
 
 .description {
-	margin-top: 10px;
-	color: #ffffff;
-	font-size: 20px;
-	letter-spacing: 6px;
+  margin-top: 10px;
+  color: #ffffff;
+  font-size: 35px;
+  letter-spacing: 6px;
 }
 
 .icon {
-	position: absolute;
-	top: 24px;
-	left: 170px;
+  position: absolute;
+  top: 24px;
+  left: 170px;
 }
 
+@media (max-width: 1550px) {
+  .slide-indicator {
+    width: 13px;
+    height: 13px;
+  }
 
-@media(max-width: 1550px) {
-	.slide-indicator {
-		width: 13px;
-		height: 13px;
-	}
+  .place-wrapper {
+    bottom: 95px;
+    padding: 16px 200px;
+  }
 
-	.place-wrapper {
-		bottom: 95px;
-		padding: 16px 200px;
+  .title {
+    font-size: 23px;
+  }
 
-	}
+  .description {
+    font-size: 35px;
+  }
 
-	.title {
-		font-size: 23px;
-	}
-
-	.description {
-		font-size: 17;
-	}
-
-	.icon{
-
-		top: 16px;
-	}
+  .icon {
+    top: 16px;
+  }
 }
