--- a/components/main/travel-types/travel-template/travel-template.module.scss
+++ b/components/main/travel-types/travel-template/travel-template.module.scss
@@ -31,7 +31,7 @@
   &-description {
     margin: 30px auto 0 auto;
     text-align: center;
-    font-size: 20px;
+    font-size: 23px;
     max-width: 600px;
     line-height: 35px;
     color: #8f8e8e;
@@ -58,8 +58,9 @@
     border: 1px #8f8e8e solid;
     color: #8f8e8e;
     letter-spacing: 3px;
-    font-size: 17px;
+    font-size: 20px;
     transition: 0.3s all;
+    will-change: color;
 
     a {
       color: inherit;
