--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap");
 
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap');
+
 /*------reset styles start-------*/
 * {
   padding: 0;
@@ -92,7 +94,7 @@ h6 {
 /*------reset styles end-------*/
 
 * {
-  font-family: "Open Sans", sans-serif;
+  font-family: "EB Garamond", serif;
 }
 
 .slick-active {
