--- a/components/blog/blog-components/paragraph/paragraph.module.scss
+++ b/components/blog/blog-components/paragraph/paragraph.module.scss
@@ -28,3 +28,16 @@
   max-width: 500px;
   margin: 0 0 0 auto;
 }
+
+.green {
+  color: rgb(75, 209, 75);
+}
+
+.red {
+  color: rgb(255, 93, 93);
+}
+
+.bold {
+  font-weight: 600;
+  letter-spacing: 3px;
+}
