--- a/components/blog/blog-components/title/title.module.scss
+++ b/components/blog/blog-components/title/title.module.scss
@@ -2,7 +2,7 @@
   text-align: center;
   font-weight: 600;
   font-size: 30px;
-  padding: 25px 0;
+  padding: 80px 0 40px 0;
   color: #ffffff;
   letter-spacing: 5px;
   position: relative;
