--- a/components/blog/blog-components/img/img.module.scss
+++ b/components/blog/blog-components/img/img.module.scss
@@ -7,13 +7,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
   margin: 0 auto;
+
   img {
     height: 100%;
     width: 100%;
     object-fit: contain !important;
   }
+}
+
+.vertical-img {
+  height: 90vh;
 }
 
 .description {
